WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148012
Performing a Lookup on wrapped text puts the popover arrow in the wrong place (off to the right)
https://bugs.webkit.org/show_bug.cgi?id=148012
Summary
Performing a Lookup on wrapped text puts the popover arrow in the wrong place...
Tim Horton
Reported
2015-08-13 19:08:51 PDT
Performing a Lookup on wrapped text puts the popover arrow in the wrong place (off to the right)
Attachments
Patch
(13.12 KB, patch)
2015-08-13 19:09 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(15.52 KB, patch)
2015-08-13 19:31 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(15.36 KB, patch)
2015-08-13 22:53 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-08-13 19:09:48 PDT
Created
attachment 258970
[details]
Patch
Tim Horton
Comment 2
2015-08-13 19:12:50 PDT
Comment on
attachment 258970
[details]
Patch Something is not right with WK1.
Tim Horton
Comment 3
2015-08-13 19:31:44 PDT
Created
attachment 258971
[details]
Patch
Tim Horton
Comment 4
2015-08-13 19:31:59 PDT
<
rdar://problem/19238094
>
Tim Horton
Comment 5
2015-08-13 22:49:55 PDT
The *ChangeLog*s don't apply? That's new.
Tim Horton
Comment 6
2015-08-13 22:53:07 PDT
Created
attachment 258983
[details]
Patch
Simon Fraser (smfr)
Comment 7
2015-08-13 23:05:20 PDT
(In reply to
comment #5
)
> The *ChangeLog*s don't apply? That's new.
I keep getting that! Did someone break resolve-Changelogs? Maybe <
rdar://problem/22044326
>?
Tim Horton
Comment 8
2015-08-13 23:33:15 PDT
http://trac.webkit.org/changeset/188443
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug