Performing a Lookup on wrapped text puts the popover arrow in the wrong place (off to the right) https://bugs.webkit.org/show_bug.cgi?id=148012 <rdar://problem/19238094>

Reviewed by Simon Fraser.

* platform/spi/mac/LookupSPI.h:
Add some SPI.

* WebView/WebView.mm:
(-[WebView _animationControllerForDictionaryLookupPopupInfo:]):
(-[WebView _showDictionaryLookupPopup:]):
Adopt the new SPI, handing it the first text rect, instead of having it
guess where to put the popover.
Also, null-check the TextIndicator.

* UIProcess/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::didPerformDictionaryLookup):
* UIProcess/mac/WKImmediateActionController.mm:
(-[WKImmediateActionController _animationControllerForText]):
Adopt the new SPI, handing it the first text rect, instead of having it
guess where to put the popover.


Canonical link: https://commits.webkit.org/166134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188443 268f45cc-cd09-0410-ab3c-d52691b4dbfc